# voice-agent-stress-test

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.yaml  config.yaml  pyproject.toml
docs/: analysis_2026-03-20_压测TTFA指标对齐分析与方案.md  feat_2026-03-19_语音Agent压力测试设计文档.md
proto/: generate.sh  voice_agent_transport.proto
reports/: report_baseline_210742.md  report_low_105924.md  report_medium_130138.md
src/: __init__.py  collector.py  gen_audio.py  grpc_stream_limit_test.py  reporter.py  run.py  session.py
src/proto_generated/: voice_agent_transport_pb2.py  voice_agent_transport_pb2_grpc.py
src/transport/: __init__.py  daily.py  grpc.py
